Ignore Lib/site-packages

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ Include/pydtrace_probes.h
 Lib/distutils/command/*.pdb
 Lib/lib2to3/*.pickle
 Lib/test/data/*
+Lib/site-packages/
 !Lib/test/data/README
 /Makefile
 /Makefile.pre
